# msvclib

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
msvclib/: devcmd.bat  devcmd.ps1
